--- a/notebooks/01_exploratory_analysis.ipynb
+++ b/notebooks/01_exploratory_analysis.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "## Projekt_OS - Olympic Games Data Analysis\n",
     "\n",
-    "Detta notebook innehåller en grundlig utforskning av olympisk data från Kaggle-datasetet \"120 years of Olympic history: athletes and results\".\n",
+    "\n",
     "\n",
     "### Dataset Information\n",
     "- **Källa**: [120 years of Olympic history: athletes and results](https://www.kaggle.com/datasets/heesoo37/120-years-of-olympic-history-athletes-and-results)\n",
@@ -871,12 +871,16 @@
     "\n",
     "Detta notebook har genomfört en grundlig explorativ dataanalys av olympisk data med fokus på:\n",
     "\n",
-    "- ✅ Dataset översikt och grundläggande statistik\n",
-    "- ✅ Visualiseringar av könsfördelning, toppländer, medaljer över tid och åldersfördelning\n",
-    "- ✅ Djupgående analys av Kanadas prestation i olympiska spelen\n",
-    "\n",
-    "**Nästa steg**: Använd denna analys som grund för dashboard-applikationen i Task 1-3."
+    "- Dataset översikt och grundläggande statistik\n",
+    "- Visualiseringar av könsfördelning, toppländer, medaljer över tid och åldersfördelning\n",
+    "-  Djupgående analys av Kanadas prestation i olympiska spelen\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
